sync files with local repository

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1"
   },
