--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules/
+./tslint-to-eslint-config.log
+node_modules
+package-lock.json
+*.lock
+Source/packs/
+Source/generators/
+dist
+foundryconfig.json
