--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,8 +3,9 @@
     "moduleResolution": "node",
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node"],
-    "allowUmdGlobalAccess": true
+    "types": ["@league-of-foundry-developers/foundry-vtt-types", "node"],
+    "allowUmdGlobalAccess": true,
+    "strict": true
   },
   "exclude": [
     "node_modules"
