--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "foundry-typescript-template",
+  "name": "foundry-module-ts",
   "version": "1.0.0",
-  "description": "Foundry VTT Typescript Template",
-  "main": "index.js",
-  "scripts": {
-    "build": "gulp build",
-    "update": "gulp update"
-  },
-  "author": "",
+  "description": "A template project for FoundryVTT modules using Typescript",
   "license": "MIT",
+  "private": true,
+  "scripts": {
+    "build": "tsc && vite build",
+    "watch": "tsc && vite build --watch"
+  },
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1"
-  },
-  "dependencies": {
-    "@types/node": "^14.10.1",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
-    "typescript": "^4.0.2"
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-scss": "^3.0.0",
+    "sass": "^1.54.8",
+    "typescript": "^4.8.2",
+    "vite": "^3.1.0"
   }
 }
