--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,30 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node"],
-    "allowUmdGlobalAccess": true
+    "types": [
+      "@league-of-foundry-developers/foundry-vtt-types",
+    ],
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
+    "moduleResolution": "Node",
+    "strict": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": false,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noImplicitOverride": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
-  "files": ["./gulpfile.ts"],
-  "exclude": [
-    "node_modules"
+  "include": [
+    "src"
   ]
 }
