--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "foundry-module-ts",
-  "version": "1.0.0",
-  "description": "A template project for FoundryVTT modules using Typescript",
+  "name": "pf2e-display-actions",
+  "version": "1.3.0",
+  "description": "A small module to display the pathfinder action economy for convinience.",
   "license": "MIT",
   "private": true,
   "scripts": {
