--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "compilerOptions": {
-    "types": [
-      "@league-of-foundry-developers/foundry-vtt-types",
-    ],
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -23,26 +20,21 @@
     "noImplicitOverride": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
     "paths": {
-      "@pf2e/*": ["types/src/*"],
-      "@actor": ["types/src/module/actor/index"],
-      "@actor/*": ["types/src/module/actor/*"],
-      "@item": ["types/src/module/item/index"],
-      "@item/*": ["types/src/module/item/*"],
-      "@system/*": ["types/src/module/system/*"],
-      "@module/*": ["types/src/module/*"],
-      "@scripts/*": ["types/src/scripts/*"]
+      "@pf2e/*": ["/types/src/*"],
+      "@actor": ["/types/src/module/actor/index"],
+      "@actor/*": ["/types/src/module/actor/*"],
+      "@item": ["/types/src/module/item/index"],
+      "@item/*": ["/types/src/module/item/*"],
+      "@system/*": ["/types/src/module/system/*"],
+      "@module/*": ["/types/src/module/*"],
+      "@scripts/*": ["/types/src/scripts/*"]
     },
     "typeRoots": [
       "node_modules/@types",
       "types/foundry"
     ]
   },
-  "include": [
-    "src",
-    "types"
-  ],
   "ts-node": {
     "files": true
   }
