inheritance is done wrongly in transpilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noImplicitOverride": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "strictNullChecks": true,
     "paths": {
       "@pf2e/*": ["/types/src/*"],
       "@actor": ["/types/src/module/actor/index"],
