--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "build": "tsc && vite build",
     "watch": "tsc && vite build --watch"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@rollup/plugin-commonjs": "^24.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-scss": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.8.3",
     "sass": "^1.54.8",
     "svelte": "^3.49.0",
     "svelte-check": "^3.0.1",
     "svelte-language-server": "^0.15.0",
     "svelte-preprocess": "^5.0.0",
     "typescript": "^4.8.2",
-    "vite": "^4"
+    "vite": "^4",
+    "vite-plugin-checker": "^0.5.3"
   }
 }
