--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "experimentalDecorators": true,
+    "importsNotUsedAsValues": "remove",
     "paths": {
       "@pf2e/*": ["/types/src/*"],
       "@actor": ["/types/src/module/actor/index"],
